--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 {{ partial "head" . }}
-<body class="lh-copy near-black bg-white ms">
+<body class="lh-copy bg-near-black white ms">
   {{ block "header" . }}
     {{ partial "nav" . }}
   {{ end }}
