--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -17,6 +17,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" rel="stylesheet" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+  <script src="https://unpkg.com/aalib.js@2.0.0/dist/aalib.js"></script>
   <script src="/js/app.js"></script>
 
   <!--Maximage-->
