--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -31,6 +31,6 @@
   <link href="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.gallery.min.css" type="text/css" rel="stylesheet" />
 
   <!--Netlify Identity-->
-  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+  <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
  
 </head>
