--- a/layouts/index.html
+++ b/layouts/index.html
@@ -29,16 +29,17 @@
   <div class="dn"></div>
   <div data-netlify-identity-button>Login with Netlify Identity</div>
   <script>
-    async function getToken() {
-      const currentUser = netlifyIdentity.currentUser()
-      if (!currentUser) {
-        return ''
-      }
-      // fetchs new JWT token only if expired
-      await currentUser.jwt()
-      return currentUser.token.access_token
+  async function getToken() {
+    const currentUser = netlifyIdentity.currentUser()
+    if (!currentUser) {
+      return ''
     }
+    // fetchs new JWT token only if expired
+    await currentUser.jwt()
+    return currentUser.token.access_token
+  }
   
+  window.onload = function(){
     let token
     netlifyIdentity.refresh()
     .then(jwt => {
@@ -56,5 +57,6 @@
     .catch(error =>{
       console.log(error)
     })
+  }
   </script>
-  {{ end }}
+{{ end }}
