--- a/layouts/index.html
+++ b/layouts/index.html
@@ -65,6 +65,17 @@
     .catch(error => {
       console.log(error)
     })
+    fetch(`/jws/hello/post/from/netlify/hugo/site`, {
+      method: 'POST',
+      headers: { Authorization: `Bearer ${token}` }})
+    .then(response => {
+      response.json().then(j =>{
+        console.log(j)
+      })
+    })
+    .catch(error => {
+      console.log(error)
+    })
   }
   </script>
 {{ end }}
